LIKA-76: Fix prelude block overflow

--- a/ckanext/ckanext-apicatalog_ui/less/layout.less
+++ b/ckanext/ckanext-apicatalog_ui/less/layout.less
@@ -279,7 +279,6 @@
     font-family: @font-family-base;
     font-size: 18px;
     font-weight: normal;
-    height: 54px;
     line-height: 27px;
     margin-bottom: 40px;
   }
